[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemys/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Enemys/Boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 199.5, 3.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8.5, 2.5 )

[sub_resource type="Animation" id=7]
resource_name = "ChainCharge"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Arm1:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 317, 79, 69, 56 ), Rect2( 240, 79, 64, 56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm1Under:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 236, 119, 4, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm1Under:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "ChainShoot"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("chain:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 175, 38.5 ), Vector2( -218, 38.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("chain2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 164, 35.5 ), Vector2( -218, 35.5 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Wheels:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 128, 144, 96, 32 ), Rect2( 128, 192, 96, 32 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Wheels:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 128, 144, 96, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm1:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 240, 80, 64, 54 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm1Under:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 236, 119, 4, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm1Under:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("chain2:region_rect")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 288, 144, 400, 16 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("chain:region_rect")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 288, 144, 400, 16 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("chain:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 175, 38.5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("chain2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 164, 35.5 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Head:region_rect")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 160, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "openMouth"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 160, 0, 64, 64 ), Rect2( 320, 0, 64, 64 ), Rect2( 320, 0, 64, 64 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0, 0 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 9.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.1
orbit_velocity_random = 0.0
linear_accel = -120.0
radial_accel = -200.0
scale = 3.0
scale_random = 1.0
color = Color( 0.921569, 0.380392, 0.380392, 0.270588 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="Animation" id=13]
resource_name = "OpenHatch"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 304, 192, 16, 32 ), Rect2( 240, 192, 16, 32 ), Rect2( 256, 192, 16, 32 ), Rect2( 272, 192, 16, 32 ), Rect2( 288, 192, 16, 32 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "OpenMouth"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 160, 0, 64, 64 ), Rect2( 240, 0, 64, 64 ), Rect2( 320, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 160, 0, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 304, 192, 16, 32 ) ]
}

[node name="Boss" type="KinematicBody2D"]
position = Vector2( -1, 0 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Arm2Under" type="Sprite" parent="."]
position = Vector2( -29, 36 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 240, 144, 4, 15 )

[node name="chain2" type="Sprite" parent="."]
position = Vector2( 164, 35.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 144, 400, 16 )

[node name="Arm2" type="Sprite" parent="."]
position = Vector2( -9, 36 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 244, 144, 36, 15 )

[node name="Arm1Under" type="Sprite" parent="."]
position = Vector2( -18, 39 )
texture = ExtResource( 1 )
offset = Vector2( -3, 0 )
region_enabled = true
region_rect = Rect2( 236, 119, 4, 15 )

[node name="chain" type="Sprite" parent="."]
position = Vector2( 175, 38.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 144, 400, 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="chain"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/StaticBody2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 5 )

[node name="Damage" type="Area2D" parent="chain"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/Damage"]
position = Vector2( -198.5, 1 )
shape = SubResource( 8 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 64, 96, 80 )

[node name="Arm1" type="Sprite" parent="."]
position = Vector2( 16, 19 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 240, 80, 64, 54 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 16, -56 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 0, 64, 64 )

[node name="Wheels" type="Sprite" parent="."]
position = Vector2( 0, 72 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 144, 96, 32 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 304, 192, 16, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChainCharge = SubResource( 7 )
anims/ChainShoot = SubResource( 9 )
anims/Move = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/openMouth = SubResource( 10 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -8, -68 )
shape = SubResource( 3 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Damage"]
position = Vector2( -32, 0 )
polygon = PoolVector2Array( -12, 56, -12, 88, 80, 88, 80, -84, 20, -84, 20, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 10 )
shape = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -21, 39 )
amount = 10
process_material = SubResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( -32, 36 )
amount = 10
process_material = SubResource( 6 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/OpenHatch = SubResource( 13 )
anims/OpenMouth = SubResource( 11 )
anims/RESET = SubResource( 12 )

[connection signal="body_entered" from="chain/Damage" to="." method="_on_Damage_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
